apps/profilarr/profilarr-deployment.yaml
# profilarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profilarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profilarr
  template:
    metadata:
      labels:
        app: profilarr
    spec:
      containers:
        - name: profilarr
          image: santiagosayshey/profilarr:latest
          ports:
            - containerPort: 6868
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: profilarr-config-claim
